# python-cdp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  update-cdp.sh
cdp/: fetch.py
cdpgen/: generate.py
docs/api/: audits.rst  autofill.rst  bluetooth_emulation.rst  browser.rst  css.rst  debugger.rst  dom.rst  emulation.rst  extensions.rst  fed_cm.rst  media.rst  network.rst  page.rst  preload.rst  pwa.rst  runtime.rst  storage.rst  system_info.rst  target.rst  web_authn.rst
pycdp/: asyncio.py  base.py  browser.py  exceptions.py  twisted.py  utils.py
pycdp/cdp/: README.md  __init__.py  accessibility.py  animation.py  audits.py  autofill.py  browser.py  cache_storage.py  css.py  debugger.py  dom.py  dom_debugger.py  emulation.py  extensions.py  fed_cm.py  fetch.py  headless_experimental.py  indexed_db.py  input_.py  io.py  layer_tree.py  network.py  overlay.py  page.py  performance_timeline.py  preload.py  pwa.py  runtime.py  security.py  service_worker.py  storage.py  target.py  tracing.py  util.py  web_audio.py  web_authn.py
test/: conftest.py  test_cdp.py  test_twisted.py
