[tool.poetry]
name = "python-cdp"
version = "1.4.0"
description = "Python type wrappers for Chrome DevTools Protocol (CDP)"
packages = [
    {include = "pycdp"}
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/HMaker/python-cdp"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet"
]
authors = [
    "Mark E. Haase <mehaase@gmail.com>",
    "Brian Mackintosh <bcmackintosh@gmail.com>",
    "Heraldo Lucena <heraldo.dev@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
deprecated = "1.2.9"
inflection = "0.4.0"
aiohttp = "3.8.3"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pytest = "^5.4.1"
sphinx = "^3.0.1"
sphinx-autodoc-typehints = "^1.10.3"
sphinx-rtd-theme = "^0.4.3"

[tool.poetry.scripts]
cdpgen = "pycdp.gen.generate:cdpgen"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
