[tool.poetry]
name = "python-cdp"
version = "1.4.1"
description = "Python type wrappers for Chrome DevTools Protocol (CDP)"
packages = [
    {include = "pycdp"}
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/HMaker/python-cdp"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet"
]
authors = [
    "Mark E. Haase <mehaase@gmail.com>",
    "Brian Mackintosh <bcmackintosh@gmail.com>",
    "Heraldo Lucena <heraldo.dev@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8, <3.13"
deprecated = "^1.2.9"
inflection = "^0.5.0"
aiohttp = "^3.10.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pytest = "^8.3.5"
sphinx = ">=7.0.0,<7.4.0"
sphinx-autodoc-typehints = "^2.0.1"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.scripts]
cdpgen = "pycdp.gen.generate:cdpgen"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
